Get Api data post

--- a/client/post.html
+++ b/client/post.html
@@ -79,37 +79,8 @@
         <div id="app-body">
             <div id="body-post">
                 <div class="col">
-                    <div class="body-post_categories">
-                        <ul class="body-post_category-list">
-                            <li class="body-post_cateogry-item">
-                                <a href="#">Giải trí</a>
-                            </li>
-                            <li class="body-post_cateogry-item">
-                                <a href="#">Công nghệ</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="body-post_title">
-                        <h1 class="post_title--text">Title bài viết nằm ở đây có nội dung khoảng hai dòng</h1>
-                    </div>
-                    <div class="body-post_auth row no-gutters">
-                        <div class="body-post_auth-avt">
-                            <a href="#">
-                                <img src="https://images.spiderum.com/sp-thumbnails/4d1a5db0064f11ed8ceb4d3af7a2493c.jpg" alt="avt">
-                            </a>
-                        </div>
-                        <div class="body-post_auth-name">
-                            <a href="#">Cuong Nguyen</a>
-                            <span>19th7, 2022</span>
-                        </div>
-                    </div>
-                    <div class="body-post_content">
-                        <p>
-                            Như tôi đã đề cập ngay từ phần tiêu đề: tự tin không tự nhiên sinh ra, cũng không tự nhiên mà mất đi. Và tự ti cũng vậy. Mong chúng ta không vì những câu nói của người khác mà đánh mất niềm tin vào bản thân. Cũng mong chúng ta không ngừng cố gắng để trở thành phiên bản tốt nhất của chính mình.
-                        </p>
-                        <a href="#">
-                            Như tôi đã đề cập ngay từ phần tiêu đề: tự tin không tự nhiên sinh ra, cũng không tự nhiên mà mất đi. Và tự ti cũng vậy. Mong chúng ta không vì những câu nói của người khác mà đánh mất niềm tin vào bản thân. Cũng mong chúng ta không ngừng cố gắng để trở thành phiên bản tốt nhất của chính mình.
-                        </a>
+                    <div class="body-post_box">
+                        
                     </div>
                     <div class="body-post_comments">
                         <div class="comment-form row no-gutters">
@@ -124,45 +95,7 @@
                             </div>
                         </div>
                         <div class="comment-list">
-                            <div class="comment-item">
-                                <div class="comment-item_auth row no-gutters">
-                                    <div class="comment-item_avt">
-                                        <a href="#">
-                                            <img src="https://images.spiderum.com/sp-thumbnails/60eedc30f9bb11ec9a8d257c57210b5d.png" alt="">
-                                        </a>
-                                    </div>
-                                    <div class="comment-item_info">
-                                        <a href="#">Cuong Nguyen</a>
-                                        <span class="row no-gutters">
-                                            <p class="comment-item_info-create">19 th7, 2022</p>
-                                            &nbsp;(Chỉnh sửa:&nbsp;<p class="comment-item_info-modify">19 th7, 2022</p>)
-                                        </span>
-                                    </div>
-                                </div>
-                                <div class="comment-item_content">
-                                    <p>Test nội dung comment, Test nội dung comment, Test nội dung comment, Test nội dung comment, Test nội dung comment, Test nội dung comment, Test nội dung comment, Test nội dung comment, Test nội dung comment, Test nội dung comment, Test nội dung comment</p>
-                                </div>
-                            </div>
-
-                            <div class="comment-item">
-                                <div class="comment-item_auth row no-gutters">
-                                    <div class="comment-item_avt">
-                                        <a href="#">
-                                            <img src="https://images.spiderum.com/sp-thumbnails/60eedc30f9bb11ec9a8d257c57210b5d.png" alt="">
-                                        </a>
-                                    </div>
-                                    <div class="comment-item_info">
-                                        <a href="#">Cuong Nguyen</a>
-                                        <span class="row no-gutters">
-                                            <p class="comment-item_info-create">19 th7, 2022</p>
-                                            &nbsp;(Chỉnh sửa:&nbsp;<p class="comment-item_info-modify">19 th7, 2022</p>)
-                                        </span>
-                                    </div>
-                                </div>
-                                <div class="comment-item_content">
-                                    <p>Test nội dung comment, Test nội dung comment, Test nội dung comment, Test nội dung comment, Test nội dung comment, Test nội dung comment, Test nội dung comment, Test nội dung comment, Test nội dung comment, Test nội dung comment, Test nội dung comment</p>
-                                </div>
-                            </div>
+                            
                         </div>
                     </div>
                 </div>
@@ -322,6 +255,7 @@
     </div>
 
     <script src="../common/js/base.js"></script>
+    <script src="./assets/js/data.post.js"></script>
 
 </body>
 </html>
