make up for username in register

--- a/guest/post.html
+++ b/guest/post.html
@@ -160,7 +160,7 @@
                         <span>Đăng nhập với Email</span>
                     </div>
                     <div class="modal-content_input">
-                        <input class="content_input__email" type="email" placeholder="Địa chỉ email">
+                        <input class="content_input__email" type="email" placeholder="Tên đăng nhập hoặc email">
                         <input class="content_input__password" type="password" placeholder="Mật khẩu đăng nhập">
                         <span class="content_submit__btn">Đăng nhập</span>
                     </div>
@@ -198,6 +198,7 @@
                             <input class="content_input__name" type="text" placeholder="Họ">
                             <input class="content_input__name" type="text" placeholder="Tên">
                         </div>
+                        <input class="content_input__username" type="text" placeholder="Tên đăng nhập">
                         <input class="content_input__email" type="email" placeholder="Địa chỉ email">
                         <input class="content_input__password" type="password" placeholder="Nhập mật khẩu">
                         <input class="content_input__password" type="password" placeholder="Nhập lại mật khẩu">
