--- a/guest/index.html
+++ b/guest/index.html
@@ -174,7 +174,7 @@
                         <span>Đăng nhập với Email</span>
                     </div>
                     <div class="modal-content_input">
-                        <input class="content_input__email" type="email" placeholder="Địa chỉ email">
+                        <input class="content_input__email" type="email" placeholder="Tên đăng nhập hoặc email">
                         <input class="content_input__password" type="password" placeholder="Mật khẩu đăng nhập">
                         <span id="modal-submit_login" class="content_submit__btn">Đăng nhập</span>
                     </div>
@@ -212,6 +212,7 @@
                             <input class="content_input__name" type="text" placeholder="Họ">
                             <input class="content_input__name" type="text" placeholder="Tên">
                         </div>
+                        <input class="content_input__username" type="text" placeholder="Tên đăng nhập">
                         <input class="content_input__email" type="email" placeholder="Địa chỉ email">
                         <input class="content_input__password" type="password" placeholder="Nhập mật khẩu">
                         <input class="content_input__password" type="password" placeholder="Nhập lại mật khẩu">
