--- a/client/post.html
+++ b/client/post.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="./assets/css/body.css">
     <link rel="stylesheet" href="./assets/css/footer.css">
     <link rel="stylesheet" href="./assets/css/responsive.css">
-    <title>Writing - post</title>
+    <title id="title-post_client"></title>
 </head>
 <body>
     <div id="app-content">
