fix select categories

--- a/client/write.html
+++ b/client/write.html
@@ -162,9 +162,9 @@
         </div>
     </div>
 
-    <script src="./assets/js/main.js"></script>
     <script src="../common/js/base.js"></script>
-    <script type="module" src="./assets/js/data.wirte.js"></script>
+    <script src="./assets/js/data.wirte.js"></script>
+    <script src="./assets/js/main.js"></script>
 
     <script src="../ckeditor/build/ckeditor.js"></script>
 
