fix url by post

--- a/client/home.html
+++ b/client/home.html
@@ -179,7 +179,7 @@
                     let html = `
                         <div class="col l-3 m-4 s-12">
                             <div class="content-post_new">
-                                <a style="cursor: pointer" onclick="saveIdLocalStorage(${post.id})" class="post-link content-post_link">
+                                <a style="cursor: pointer" href="./post.html#${post.id}" class="post-link content-post_link">
                                     <div class="content-post_image" style="background-image: url(${post.thumbnails});">
                                     </div>
                                 </a>
@@ -189,7 +189,7 @@
                                         <a href="#" class="content-post_category">${firstCategory.name}</a>
                                     </div>
                                     <div class="content-post_title">
-                                        <a style="cursor: pointer" onclick="saveIdLocalStorage(${post.id})" class="post-link content-post_link">${post.title}</a>
+                                        <a style="cursor: pointer" href="./post.html#${post.id}" class="post-link content-post_link">${post.title}</a>
                                     </div>
                                     <div class="content-post_description">
                                         <p>${post.description}</p>
