--- a/guest/index.html
+++ b/guest/index.html
@@ -255,7 +255,7 @@
 
     <script src="../common/js/base.js"></script>
     <script src="./assets/js/main.js"></script>
-    <script src="./assets/js/data.js"></script>
+    <script src="./assets/js/data.home.js"></script>
     <script>
         // localStorage.clear();
         console.log({ ...localStorage });
