--- a/guest/post.html
+++ b/guest/post.html
@@ -242,7 +242,7 @@
 
     <script src="../common/js/base.js"></script>
     <script src="./assets/js/main.js"></script>
-    <script src="./assets/js/data.js"></script>
+    <script src="./assets/js/data.post.js"></script>
 
     <script>
 
