--- a/client/post.html
+++ b/client/post.html
@@ -55,6 +55,11 @@
         </div>
 
         <div id="app-body">
+            <style>
+                img {
+                    width: 100% !important;
+                }
+            </style>
             <div id="body-post">
                 <div class="col">
                     <div class="body-post_box">
