--- a/guest/index.html
+++ b/guest/index.html
@@ -115,7 +115,13 @@
                     </div>
                     <div class="footer-body row no-gutters">
                         <div class="footer-description l-6 m-6">
-                            <p>Một sản phẩm được chuẩn bị cho quá trình thực tập xin việc, không khai thác kinh doanh dưới bất kỳ hình thức nào.</p>
+                            <p>Project cá nhân chuẩn bị cho xin việc thực tập</p><br>
+                            <h3>Mô hình: RESTful API</h3><br>
+                            <h3>Công nghệ sử dụng</h3>
+                            <p>Backend: Java (Spring boot), JWT Authentication</p>
+                            <p>Database: MySQL</p>
+                            <p>Frontend: HTML, CSS, Javascript, CKeditor library</p>
+                            <p>Deploy: AWS</p>
                         </div>
                         <div class="footer-contact l-6 m-6">
                             <ul class="footer-contact_list">
