link to home page

--- a/client/write.html
+++ b/client/write.html
@@ -29,7 +29,7 @@
                 <div class="header-navbar row no-gutters">
                     <div class="navbar_element row no-gutters">
                         <div class="navbar-logo">
-                            <a href="#" class="navbar-logo_link">
+                            <a href="./home.html" class="navbar-logo_link">
                                 <img src="../common/image/logo.png" alt="writing">
                             </a>
                         </div>
