--- a/client/setting.html
+++ b/client/setting.html
@@ -79,65 +79,7 @@
         <div id="app-body">
             <div class="grid wide col">
                 <div id="app-setting">
-                    <div class="row mg-bottom-30">
-                        <div class="setting_about-me col l-6 m-6 s-12">
-                            <div class="setting_title">
-                                <span>Chỉnh sửa mô tả</span>
-                            </div>
-                            <div class="setting_content">
-                                <textarea rows="3" name="" class="setting_about-me_text row no-gutters" spellcheck="false" placeholder="get data cũ" >
-                                        
-                                </textarea>
-                            </div>
-                        </div>
-                        <div class="setting_email col l-6 m-6 s-12">
-                            <div class="setting_title">
-                                <span>Chỉnh sửa email</span>
-                            </div>
-                            <div class="setting_content">
-                                <input class="setting_input setting_email-input" type="email" placeholder="get data cũ">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row mg-bottom-30">
-                        <div class="setting_first-name col l-6 m-6 s-12">
-                            <div class="setting_title">
-                                <span>Chỉnh sửa tên</span>
-                            </div>
-                            <div class="setting_content">
-                                <input type="text" class="setting_input setting_name_input" placeholder="get data cũ">
-                            </div>
-                        </div>
-                        <div class="setting_last-name col l-6 m-6 s-12">
-                            <div class="setting_title">
-                                <span>Chỉnh sửa họ</span>
-                            </div>
-                            <div class="setting_content">
-                                <input type="text" class="setting_input setting_name_input" placeholder="get data cũ">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row mg-bottom-30">
-                        <div class="setting_date-of-birth col l-6 m-6 s-12">
-                            <div class="setting_title">
-                                <span>Chỉnh sửa ngày sinh</span>
-                            </div>
-                            <div class="setting_content">
-                                <input type="date" class="setting_input setting_dob-input" placeholder="get data cũ">
-                            </div>
-                        </div>
-                        <div class="setting_gender col l-6 m-6 s-12">
-                            <div class="setting_title">
-                                <span>Chỉnh sửa giới tính</span>
-                            </div>
-                            <div class="setting_content">
-                                <select class="setting_gender_select" name="gender" id="gender">
-                                    <option value="male">Nam</option>
-                                    <option value="female">Nữ</option>
-                                </select>
-                            </div>
-                        </div>
-                    </div>
+                    
                 </div>
                 <div id="app-setting_save" class="row no-gutters">
                     <span class="setting-save_btn">Lưu thông tin</span>
@@ -207,6 +149,7 @@
     </div>
 
     <script src="../common/js/base.js"></script>
+    <script src="./assets/js/data.setting.js"></script>
 
 </body>
 </html>
