--- a/client/post.html
+++ b/client/post.html
@@ -74,7 +74,8 @@
                                 </textarea>
                             </div>
                             <div class="comment-form-submit">
-                                <span class="comment-form-submit-btn">Gửi</span>
+                                <span class="comment-form-submit-btn comment-submit_new">Gửi</span>
+                                <span class="comment-form-submit-btn comment-submit_update hidden-element">Cập nhật</span>
                             </div>
                         </div>
                         <div class="comment-list">
