fix display image

--- a/client/post.html
+++ b/client/post.html
@@ -57,7 +57,7 @@
         <div id="app-body">
             <style>
                 img {
-                    width: 100% !important;
+                    width: 100%;
                 }
             </style>
             <div id="body-post">
