--- a/guest/post.html
+++ b/guest/post.html
@@ -51,6 +51,11 @@
         </div>
 
         <div id="app-body">
+            <style>
+                img {
+                    width: 100%;
+                }
+            </style>
             <div id="body-post">
                 <div class="col">
                     <div class="body-post_categories">
