--- a/client/posts-search.html
+++ b/client/posts-search.html
@@ -37,6 +37,7 @@
                         <i class="navbar_back-icon fa-solid fa-arrow-left" style="display: none;"></i>
                         <input class="navbar-search_type" type="search" placeholder="Nhập nội dung tìm kiếm">
                         <i class="search_icon fa-solid fa-magnifying-glass"></i>
+                        <i class="search_icon_mobile fa-solid fa-magnifying-glass"></i>
                     </div> 
                     <div class="navbar_element">
                         <div class="navbar_new-post">
