link to user profile page

--- a/client/home.html
+++ b/client/home.html
@@ -203,7 +203,7 @@
                                         <p>${post.description}</p>
                                     </div>
                                     <div class="content-post_info">
-                                        <a href="#" class="content-post_auth">
+                                        <a href="./user.html#${post.userProfile.usernameByUser}" class="content-post_auth">
                                             <img src="${post.userProfile.avatarPhoto}" alt="Avartar">
                                             <span>${post.userProfile.firstName} ${post.userProfile.lastName}</span>
                                         </a>
